--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "bhts-server",
   "version": "1.0.0",
+  "description": "CapitalOne Black & Hispanic Tech Summit. Team Rubber Duckies submission server repository.",
   "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "lint": "eslint src/**"
+  },
   "repository": "https://github.com/TeamRubberDuckies/server.git",
   "author": "Aryan Mittal",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "esbuild": "^0.18.17",
+    "eslint": "^8.46.0",
+    "serverless-domain-manager": "^7.1.1",
+    "serverless-esbuild": "^1.46.0",
+    "serverless-stage-manager": "^1.0.5"
+  }
 }
